--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,9 @@
+# Путь к файлу с сохраненной моделью
+MODEL_PATH=models/prod_model.pkl
+# Путь к файлам с примерами входных/выходных данных для модели
+MODEL_X_EXAMPLE=models/x_example.json
+MODEL_Y_EXAMPLE=models/y_example.json
+
 # Уровень логгирования
 APP_LOG_LEVEL=DEBUG
 
@@ -6,8 +12,5 @@ APP_LOG_LEVEL=DEBUG
 APP_HOST_DOCKER=0.0.0.0
 APP_PORT_DOCKER=7000
 
-# Путь к файлу с сохраненной моделью
-MODEL_PATH="models/prod_model.pkl"
-# Путь к файлам с примерами входных/выходных данных для модели
-MODEL_X_EXAMPLE="models/x_example.json"
-MODEL_Y_EXAMPLE="models/y_example.json"
+# Внешний порт микросервиса
+APP_PORT_EXTERNAL=7000
