--- a/.env_example
+++ b/.env_example
@@ -7,10 +7,19 @@ MODEL_Y_EXAMPLE=models/y_example.json
 # Уровень логгирования
 APP_LOG_LEVEL=DEBUG
 
-# Хост/порт микросервиса внутри докера 
-# (также используется для standalone запуска через 'python app/app.py')
-APP_HOST_DOCKER=0.0.0.0
+# Порт микросервиса внутри докера 
 APP_PORT_DOCKER=7000
+
+# Адрес внешнего интерфейса для сервисов (fastapi/prometheus/grafana)
+HOST_EXTERNAL=127.0.0.1
 
 # Внешний порт микросервиса
 APP_PORT_EXTERNAL=7000
+
+# Внешние порты для prometheus/grafana
+PROMETHEUS_PORT_EXTERNAL=7001
+GRAFANA_PORT_EXTERNAL=7002
+
+# Пользователь grafana
+GRAFANA_USER=admin
+GRAFANA_USER_PASSWORD=grafana
