--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -1,10 +1,11 @@
 FROM python:3.10-slim
 
-COPY . ./fastapi_app
+COPY ./requirements.txt /fastapi_app/requirements.txt
+COPY ./app /fastapi_app/app
 
 WORKDIR fastapi_app 
 
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-CMD uvicorn --app-dir=app --reload --port=${APP_PORT_DOCKER} \
---host=${APP_HOST_DOCKER} app:app
+CMD uvicorn --app-dir=app --host=0.0.0.0 --port=${APP_PORT_DOCKER} --reload \
+app:app
