--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,8 @@ pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
 plotly==5.22.0
+prometheus-fastapi-instrumentator==7.0.0
+prometheus_client==0.20.0
 prompt_toolkit==3.0.46
 psutil==5.9.8
 ptyprocess==0.7.0
