--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,12 @@
 # Путь к файлу с сохраненной моделью
 MODEL_PATH=models/prod_model.pkl
+
 # Путь к файлам с примерами входных/выходных данных для модели
 MODEL_X_EXAMPLE=models/x_example.json
 MODEL_Y_EXAMPLE=models/y_example.json
 
-# Уровень логгирования
+# Уровень логгирования микросервиса 
+# https://docs.python.org/3/library/logging.html#logging-levels
 APP_LOG_LEVEL=DEBUG
 
 # Порт микросервиса внутри докера 
@@ -23,3 +25,7 @@ GRAFANA_PORT_EXTERNAL=7002
 # Пользователь grafana
 GRAFANA_USER=admin
 GRAFANA_USER_PASSWORD=grafana
+
+# Уровни логгирования prometheus/grafana {debug | info | warn | error}
+PROMETHEUS_LOG_LEVEl=warn
+GRAFANA_LOG_LEVEl=warn
