--- a/.env_example
+++ b/.env_example
@@ -27,5 +27,5 @@ GRAFANA_USER=admin
 GRAFANA_USER_PASSWORD=grafana
 
 # Уровни логгирования prometheus/grafana {debug | info | warn | error}
-PROMETHEUS_LOG_LEVEl=warn
-GRAFANA_LOG_LEVEl=warn
+PROMETHEUS_LOG_LEVEL=warn
+GRAFANA_LOG_LEVEL=warn
